fixing routing issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movie-website",
-  "homepage": "https://hareeshgg.github.io/Movie-Flix",
+  "homepage": "https://hareeshgg.github.io/Movie-Flix/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
